// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConversationService – createConversation > streams conversation events across prompts > all events 1`] = `
[
  {
    "message": {
      "content": "What's the weather in Tokyo?",
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "id": 1,
      "queueOrder": 1,
      "role": "user",
      "status": "queued",
      "updatedAt": "Any<Date>",
    },
    "type": "message-created",
  },
  {
    "message": {
      "content": "What's the weather in Tokyo?",
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "id": 1,
      "queueOrder": 1,
      "role": "user",
      "status": "processing",
      "updatedAt": "Any<Date>",
    },
    "type": "message-updated",
  },
  {
    "message": {
      "content": null,
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "id": 2,
      "queueOrder": null,
      "role": "assistant",
      "status": "processing",
      "updatedAt": "Any<Date>",
    },
    "type": "message-created",
  },
  {
    "message": {
      "content": "What's the weather in Tokyo?",
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "id": 1,
      "queueOrder": 1,
      "role": "user",
      "status": "completed",
      "updatedAt": "Any<Date>",
    },
    "type": "message-updated",
  },
  {
    "prompt": {
      "completedAt": null,
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "error": null,
      "id": 1,
      "messageId": 2,
      "model": "claude-sonnet-4-20250514",
      "request": null,
      "response": null,
      "status": "streaming",
      "systemMessage": "You are a helpful assistant with access to a bash terminal. When users ask you to:
- List files or directories
- Run commands  
- Check system information
- Execute scripts
- Perform any system operations

Use the bash tool to execute the appropriate commands. Always explain what you're doing and show the results to the user.

For example:
- "list files" or "what files are here" → use bash tool with "ls" command
- "current directory" → use bash tool with "pwd" command  
- "check disk space" → use bash tool with "df -h" command

Execute the commands and then explain the results in a helpful way.",
    },
    "type": "prompt-started",
  },
  {
    "blockId": 2,
    "blockType": "tool_use",
    "messageId": 2,
    "promptId": 1,
    "type": "block-start",
  },
  {
    "blockId": 2,
    "content": "Using bash tool...",
    "messageId": 2,
    "promptId": 1,
    "type": "block-delta",
  },
  {
    "blockId": 2,
    "messageId": 2,
    "promptId": 1,
    "type": "block-end",
  },
  {
    "input": {
      "command": "weather --city tokyo",
    },
    "toolCall": {
      "apiToolCallId": "fake-tool-call-1",
      "blockId": 2,
      "completedAt": null,
      "createdAt": "Any<Date>",
      "error": null,
      "id": 1,
      "input": {
        "command": "weather --city tokyo",
      },
      "lastHeartbeat": null,
      "maxRetries": 3,
      "name": "bash",
      "output": null,
      "pid": null,
      "promptId": 1,
      "retryCount": 0,
      "startedAt": null,
      "state": "pending",
      "timeoutAt": null,
      "timeoutSeconds": 300,
      "updatedAt": "Any<Date>",
    },
    "type": "tool-call-started",
  },
  {
    "blockId": 2,
    "output": "testing tool output.
",
    "toolCallId": 1,
    "type": "tool-call-progress",
  },
  {
    "blockId": 2,
    "output": "this is just ",
    "toolCallId": 1,
    "type": "tool-call-progress",
  },
  {
    "blockId": 2,
    "output": "a test!",
    "toolCallId": 1,
    "type": "tool-call-progress",
  },
  {
    "toolCall": {
      "apiToolCallId": "fake-tool-call-1",
      "blockId": 2,
      "completedAt": "Any<Date>",
      "createdAt": "Any<Date>",
      "error": null,
      "id": 1,
      "input": {
        "command": "weather --city tokyo",
      },
      "lastHeartbeat": null,
      "maxRetries": 3,
      "name": "bash",
      "output": "testing tool output.
this is just a test!",
      "pid": null,
      "promptId": 1,
      "retryCount": 0,
      "startedAt": "Any<Date>",
      "state": "completed",
      "timeoutAt": null,
      "timeoutSeconds": 300,
      "updatedAt": "Any<Date>",
    },
    "type": "tool-call-completed",
  },
  {
    "blockId": 2,
    "messageId": 2,
    "promptId": 1,
    "type": "block-end",
  },
  {
    "blockId": 3,
    "blockType": "text",
    "messageId": 2,
    "promptId": 1,
    "type": "block-start",
  },
  {
    "blockId": 3,
    "content": "The weather report is above. ",
    "messageId": 2,
    "promptId": 1,
    "type": "block-delta",
  },
  {
    "blockId": 3,
    "content": "Let me know if you need more details.",
    "messageId": 2,
    "promptId": 1,
    "type": "block-delta",
  },
  {
    "blockId": 3,
    "messageId": 2,
    "promptId": 1,
    "type": "block-end",
  },
  {
    "prompt": {
      "completedAt": "Any<Date>",
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "error": null,
      "id": 1,
      "messageId": 2,
      "model": "claude-sonnet-4-20250514",
      "request": null,
      "response": null,
      "status": "completed",
      "systemMessage": "You are a helpful assistant with access to a bash terminal. When users ask you to:
- List files or directories
- Run commands  
- Check system information
- Execute scripts
- Perform any system operations

Use the bash tool to execute the appropriate commands. Always explain what you're doing and show the results to the user.

For example:
- "list files" or "what files are here" → use bash tool with "ls" command
- "current directory" → use bash tool with "pwd" command  
- "check disk space" → use bash tool with "df -h" command

Execute the commands and then explain the results in a helpful way.",
    },
    "type": "prompt-completed",
  },
  {
    "message": {
      "content": null,
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "id": 2,
      "queueOrder": null,
      "role": "assistant",
      "status": "completed",
      "updatedAt": "Any<Date>",
    },
    "type": "message-updated",
  },
  {
    "message": {
      "content": "Tell me a quick joke",
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "id": 3,
      "queueOrder": 1,
      "role": "user",
      "status": "queued",
      "updatedAt": "Any<Date>",
    },
    "type": "message-created",
  },
  {
    "message": {
      "content": "Tell me a quick joke",
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "id": 3,
      "queueOrder": 1,
      "role": "user",
      "status": "processing",
      "updatedAt": "Any<Date>",
    },
    "type": "message-updated",
  },
  {
    "message": {
      "content": null,
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "id": 4,
      "queueOrder": null,
      "role": "assistant",
      "status": "processing",
      "updatedAt": "Any<Date>",
    },
    "type": "message-created",
  },
  {
    "message": {
      "content": "Tell me a quick joke",
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "id": 3,
      "queueOrder": 1,
      "role": "user",
      "status": "completed",
      "updatedAt": "Any<Date>",
    },
    "type": "message-updated",
  },
  {
    "prompt": {
      "completedAt": null,
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "error": null,
      "id": 2,
      "messageId": 4,
      "model": "claude-sonnet-4-20250514",
      "request": null,
      "response": null,
      "status": "streaming",
      "systemMessage": "You are a helpful assistant with access to a bash terminal. When users ask you to:
- List files or directories
- Run commands  
- Check system information
- Execute scripts
- Perform any system operations

Use the bash tool to execute the appropriate commands. Always explain what you're doing and show the results to the user.

For example:
- "list files" or "what files are here" → use bash tool with "ls" command
- "current directory" → use bash tool with "pwd" command  
- "check disk space" → use bash tool with "df -h" command

Execute the commands and then explain the results in a helpful way.",
    },
    "type": "prompt-started",
  },
  {
    "blockId": 5,
    "blockType": "tool_use",
    "messageId": 4,
    "promptId": 2,
    "type": "block-start",
  },
  {
    "blockId": 5,
    "content": "Using bash tool...",
    "messageId": 4,
    "promptId": 2,
    "type": "block-delta",
  },
  {
    "blockId": 5,
    "messageId": 4,
    "promptId": 2,
    "type": "block-end",
  },
  {
    "input": {
      "command": "tell me a joke",
    },
    "toolCall": {
      "apiToolCallId": "fake-tool-call-2",
      "blockId": 5,
      "completedAt": null,
      "createdAt": "Any<Date>",
      "error": null,
      "id": 2,
      "input": {
        "command": "tell me a joke",
      },
      "lastHeartbeat": null,
      "maxRetries": 3,
      "name": "bash",
      "output": null,
      "pid": null,
      "promptId": 2,
      "retryCount": 0,
      "startedAt": null,
      "state": "pending",
      "timeoutAt": null,
      "timeoutSeconds": 300,
      "updatedAt": "Any<Date>",
    },
    "type": "tool-call-started",
  },
  {
    "blockId": 5,
    "output": "testing tool output.
",
    "toolCallId": 2,
    "type": "tool-call-progress",
  },
  {
    "blockId": 5,
    "output": "this is just ",
    "toolCallId": 2,
    "type": "tool-call-progress",
  },
  {
    "blockId": 5,
    "output": "a test!",
    "toolCallId": 2,
    "type": "tool-call-progress",
  },
  {
    "toolCall": {
      "apiToolCallId": "fake-tool-call-2",
      "blockId": 5,
      "completedAt": "Any<Date>",
      "createdAt": "Any<Date>",
      "error": null,
      "id": 2,
      "input": {
        "command": "tell me a joke",
      },
      "lastHeartbeat": null,
      "maxRetries": 3,
      "name": "bash",
      "output": "testing tool output.
this is just a test!",
      "pid": null,
      "promptId": 2,
      "retryCount": 0,
      "startedAt": "Any<Date>",
      "state": "completed",
      "timeoutAt": null,
      "timeoutSeconds": 300,
      "updatedAt": "Any<Date>",
    },
    "type": "tool-call-completed",
  },
  {
    "blockId": 5,
    "messageId": 4,
    "promptId": 2,
    "type": "block-end",
  },
  {
    "blockId": 6,
    "blockType": "text",
    "messageId": 4,
    "promptId": 2,
    "type": "block-start",
  },
  {
    "blockId": 6,
    "content": "Here's something funny: Why did the scarecrow win an award? ",
    "messageId": 4,
    "promptId": 2,
    "type": "block-delta",
  },
  {
    "blockId": 6,
    "content": "Because he was outstanding in his field.",
    "messageId": 4,
    "promptId": 2,
    "type": "block-delta",
  },
  {
    "blockId": 6,
    "messageId": 4,
    "promptId": 2,
    "type": "block-end",
  },
  {
    "prompt": {
      "completedAt": "Any<Date>",
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "error": null,
      "id": 2,
      "messageId": 4,
      "model": "claude-sonnet-4-20250514",
      "request": null,
      "response": null,
      "status": "completed",
      "systemMessage": "You are a helpful assistant with access to a bash terminal. When users ask you to:
- List files or directories
- Run commands  
- Check system information
- Execute scripts
- Perform any system operations

Use the bash tool to execute the appropriate commands. Always explain what you're doing and show the results to the user.

For example:
- "list files" or "what files are here" → use bash tool with "ls" command
- "current directory" → use bash tool with "pwd" command  
- "check disk space" → use bash tool with "df -h" command

Execute the commands and then explain the results in a helpful way.",
    },
    "type": "prompt-completed",
  },
  {
    "message": {
      "content": null,
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "id": 4,
      "queueOrder": null,
      "role": "assistant",
      "status": "completed",
      "updatedAt": "Any<Date>",
    },
    "type": "message-updated",
  },
]
`;

exports[`ConversationService – createConversation > streams conversation events across prompts > final snapshot 1`] = `
{
  "conversation": {
    "activePromptId": null,
    "createdAt": "Any<Date>",
    "id": 1,
    "title": "Streaming",
    "updatedAt": "Any<Date>",
    "userId": 1,
  },
  "messages": [
    {
      "blocks": [
        {
          "content": "What's the weather in Tokyo?",
          "createdAt": "Any<Date>",
          "id": 1,
          "messageId": 1,
          "metadata": null,
          "order": 0,
          "type": "text",
          "updatedAt": "Any<Date>",
        },
      ],
      "content": "What's the weather in Tokyo?",
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "id": 1,
      "queueOrder": 1,
      "role": "user",
      "status": "completed",
      "updatedAt": "Any<Date>",
    },
    {
      "blocks": [
        {
          "content": "testing tool output.
this is just a test!",
          "createdAt": "Any<Date>",
          "id": 2,
          "messageId": 2,
          "metadata": {
            "toolName": "bash",
            "toolUseId": "fake-tool-call-1",
          },
          "order": 0,
          "toolCall": {
            "apiToolCallId": "fake-tool-call-1",
            "blockId": 2,
            "completedAt": "Any<Date>",
            "createdAt": "Any<Date>",
            "error": null,
            "id": 1,
            "input": {
              "command": "weather --city tokyo",
            },
            "lastHeartbeat": null,
            "maxRetries": 3,
            "name": "bash",
            "output": "testing tool output.
this is just a test!",
            "pid": null,
            "promptId": 1,
            "retryCount": 0,
            "startedAt": "Any<Date>",
            "state": "completed",
            "timeoutAt": null,
            "timeoutSeconds": 300,
            "updatedAt": "Any<Date>",
          },
          "type": "tool_result",
          "updatedAt": "Any<Date>",
        },
        {
          "content": "The weather report is above. Let me know if you need more details.",
          "createdAt": "Any<Date>",
          "id": 3,
          "messageId": 2,
          "metadata": null,
          "order": 0,
          "type": "text",
          "updatedAt": "Any<Date>",
        },
      ],
      "content": null,
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "id": 2,
      "queueOrder": null,
      "role": "assistant",
      "status": "completed",
      "updatedAt": "Any<Date>",
    },
    {
      "blocks": [
        {
          "content": "Tell me a quick joke",
          "createdAt": "Any<Date>",
          "id": 4,
          "messageId": 3,
          "metadata": null,
          "order": 0,
          "type": "text",
          "updatedAt": "Any<Date>",
        },
      ],
      "content": "Tell me a quick joke",
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "id": 3,
      "queueOrder": 1,
      "role": "user",
      "status": "completed",
      "updatedAt": "Any<Date>",
    },
    {
      "blocks": [
        {
          "content": "testing tool output.
this is just a test!",
          "createdAt": "Any<Date>",
          "id": 5,
          "messageId": 4,
          "metadata": {
            "toolName": "bash",
            "toolUseId": "fake-tool-call-2",
          },
          "order": 0,
          "toolCall": {
            "apiToolCallId": "fake-tool-call-2",
            "blockId": 5,
            "completedAt": "Any<Date>",
            "createdAt": "Any<Date>",
            "error": null,
            "id": 2,
            "input": {
              "command": "tell me a joke",
            },
            "lastHeartbeat": null,
            "maxRetries": 3,
            "name": "bash",
            "output": "testing tool output.
this is just a test!",
            "pid": null,
            "promptId": 2,
            "retryCount": 0,
            "startedAt": "Any<Date>",
            "state": "completed",
            "timeoutAt": null,
            "timeoutSeconds": 300,
            "updatedAt": "Any<Date>",
          },
          "type": "tool_result",
          "updatedAt": "Any<Date>",
        },
        {
          "content": "Here's something funny: Why did the scarecrow win an award? Because he was outstanding in his field.",
          "createdAt": "Any<Date>",
          "id": 6,
          "messageId": 4,
          "metadata": null,
          "order": 0,
          "type": "text",
          "updatedAt": "Any<Date>",
        },
      ],
      "content": null,
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "id": 4,
      "queueOrder": null,
      "role": "assistant",
      "status": "completed",
      "updatedAt": "Any<Date>",
    },
  ],
}
`;

exports[`ConversationService – createConversation > streams conversation events across prompts > mid connecting snapshot 1`] = `
{
  "conversation": {
    "activePromptId": 1,
    "createdAt": "Any<Date>",
    "id": 1,
    "title": "Streaming",
    "updatedAt": "Any<Date>",
    "userId": 1,
  },
  "messages": [
    {
      "blocks": [
        {
          "content": "What's the weather in Tokyo?",
          "createdAt": "Any<Date>",
          "id": 1,
          "messageId": 1,
          "metadata": null,
          "order": 0,
          "type": "text",
          "updatedAt": "Any<Date>",
        },
      ],
      "content": "What's the weather in Tokyo?",
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "id": 1,
      "queueOrder": 1,
      "role": "user",
      "status": "completed",
      "updatedAt": "Any<Date>",
    },
    {
      "blocks": [
        {
          "content": "testing tool output.
this is just a test!",
          "createdAt": "Any<Date>",
          "id": 2,
          "messageId": 2,
          "metadata": {
            "toolName": "bash",
            "toolUseId": "fake-tool-call-1",
          },
          "order": 0,
          "toolCall": {
            "apiToolCallId": "fake-tool-call-1",
            "blockId": 2,
            "completedAt": "Any<Date>",
            "createdAt": "Any<Date>",
            "error": null,
            "id": 1,
            "input": {
              "command": "weather --city tokyo",
            },
            "lastHeartbeat": null,
            "maxRetries": 3,
            "name": "bash",
            "output": "testing tool output.
this is just a test!",
            "pid": null,
            "promptId": 1,
            "retryCount": 0,
            "startedAt": "Any<Date>",
            "state": "completed",
            "timeoutAt": null,
            "timeoutSeconds": 300,
            "updatedAt": "Any<Date>",
          },
          "type": "tool_result",
          "updatedAt": "Any<Date>",
        },
      ],
      "content": null,
      "conversationId": 1,
      "createdAt": "Any<Date>",
      "id": 2,
      "queueOrder": null,
      "role": "assistant",
      "status": "processing",
      "updatedAt": "Any<Date>",
    },
  ],
}
`;
